force-app/main/default/src/objects/MVN_Staging_Claim__c/MVN_Staging_Claim__c.object-meta.xml
<CustomObject>
    <description>Used to stage integration-sourced claims data so that it can be mapped to Claims records.</description>
    <label>Staging Claim</label>
    <nameField>
        <displayFormat>SC-{0000}</displayFormat>
        <label>Staging Claim Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Staging Claims</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>