force-app/main/default/src/objects/MVN_Staging_Claim__c/fields/MVN_Billing_Provider_Name__c.field-meta.xml
<CustomField>
    <fullName>MVN_Billing_Provider_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Billing Provider Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>