force-app/main/default/src/objects/MVN_Staging_Claim__c/fields/MVN_Billing_Provider_State__c.field-meta.xml
<CustomField>
    <fullName>MVN_Billing_Provider_State__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Billing Provider State</label>
    <length>2</length>
    <type>Text</type>
</CustomField>