force-app/main/default/src/objects/MVN_Staging_Claim__c/fields/MVN_Billing_Provider_Zip__c.field-meta.xml
<CustomField>
    <fullName>MVN_Billing_Provider_Zip__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Billing Provider Zip</label>
    <length>10</length>
    <type>Text</type>
</CustomField>