force-app/main/default/src/objects/MVN_Staging_Claim__c/fields/MVN_Check_Number__c.field-meta.xml
<CustomField>
    <fullName>MVN_Check_Number__c</fullName>
    <description>Only applicable for check payment. For checks, this number may be delivered in a subsequent record after the original record.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Check #</label>
    <length>10</length>
    <type>Text</type>
</CustomField>