force-app/main/default/src/objects/MVN_Staging_Claim__c/fields/MVN_Claim_Closed_Date__c.field-meta.xml
<CustomField>
    <fullName>MVN_Claim_Closed_Date__c</fullName>
    <description>Format: MM/DD/YYYY

Represents the date a claim is either:
a) rejected or 
b) closed and approved and a payment request made to a financial institution</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Claim Closed Date</label>
    <length>10</length>
    <type>Text</type>
</CustomField>