force-app/main/default/src/objects/MVN_Staging_Claim__c/fields/MVN_Claim_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>MVN_Claim_Created_Date__c</fullName>
    <description>Format: MM/DD/YYYY
Based on date ConnectiveRx enters the claim into the system for processing</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Claim Create Date</label>
    <length>10</length>
    <type>Text</type>
</CustomField>