force-app/main/default/src/objects/MVN_Staging_Claim__c/fields/MVN_Claim_Id__c.field-meta.xml
<CustomField>
    <fullName>MVN_Claim_Id__c</fullName>
    <description>Claim ID (CRx generated)</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Claim ID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>