force-app/main/default/src/objects/MVN_Staging_Claim__c/fields/MVN_Claim_Receipt_Date__c.field-meta.xml
<CustomField>
    <fullName>MVN_Claim_Receipt_Date__c</fullName>
    <description>Date which the claims arrives at ConnectiveRx. That is the day the claim hits the CRx incoming fax machine.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Claim Receipt Date</label>
    <length>10</length>
    <type>Text</type>
</CustomField>