force-app/main/default/src/objects/MVN_Staging_Claim__c/fields/MVN_Client_Id__c.field-meta.xml
<CustomField>
    <fullName>MVN_Client_Id__c</fullName>
    <description>Client ID</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Client ID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>