force-app/main/default/src/objects/MVN_Staging_Claim__c/fields/MVN_Copay_Amount__c.field-meta.xml
<CustomField>
    <fullName>MVN_Copay_Amount__c</fullName>
    <description>Amount in $ paid by primary insurance 
This is required for approved claims only. Rejected claims may or may not have this available so validations at Integrichain should only be applied to approved claims.</description>
    <label>Copay/Co-insurance amount</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>