force-app/main/default/src/objects/MVN_Staging_Claim__c/fields/MVN_CRM_Patient_Id__c.field-meta.xml
<CustomField>
    <fullName>MVN_CRM_Patient_Id__c</fullName>
    <description>Partner (Manufacturer) Specific ID for patient</description>
    <encryptionScheme>None</encryptionScheme>
    <label>CRM Patient ID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>