force-app/main/default/src/objects/MVN_Staging_Claim__c/fields/MVN_Date_of_Service__c.field-meta.xml
<CustomField>
    <fullName>MVN_Date_of_Service__c</fullName>
    <description>MM/DD/YYYY This is required for approved claims only. Rejected claims may or may not have this available so validations at Integrichain should only be applied to approved claims.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Date of Service</label>
    <length>10</length>
    <type>Text</type>
</CustomField>