force-app/main/default/src/objects/MVN_Staging_Claim__c/fields/MVN_Date_Processed__c.field-meta.xml
<CustomField>
    <fullName>MVN_Date_Processed__c</fullName>
    <description>Date that the claim was processed 
Format: DD-MMM-YY (i.e., 03-Feb-15)</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Date Processed</label>
    <length>12</length>
    <type>Text</type>
</CustomField>