force-app/main/default/src/objects/MVN_Staging_Claim__c/fields/MVN_Date_Written__c.field-meta.xml
<CustomField>
    <fullName>MVN_Date_Written__c</fullName>
    <description>Date prescription was written</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Date Written</label>
    <length>10</length>
    <type>Text</type>
</CustomField>