force-app/main/default/src/objects/MVN_Staging_Claim__c/fields/MVN_DAW__c.field-meta.xml
<CustomField>
    <fullName>MVN_DAW__c</fullName>
    <description>Dispense as Written code as submitted by the pharmacy. 

Expected values: 0,1,2,3,4,5,6,7,8 

0 = No product selection indicated
1 = Substitution not allowed by prescriber
2 = Substitution allowed – patient requested product dispensed
3 = Substitution allowed – pharmacy requested product dispensed
4 = Substitution allowed – generic drug not in stock
5 = Substitution allowed – brand drug dispensed as generic
6 = Undefined (not in general use; reserved for future use
7 = Substitution not allowed – brand drug mandated by law/regulation
8 = Substitution not allowed – generic drug available in marketplace</description>
    <encryptionScheme>None</encryptionScheme>
    <label>DAW</label>
    <length>1</length>
    <type>Text</type>
</CustomField>