force-app/main/default/src/objects/MVN_Staging_Claim__c/fields/MVN_Day_Supply__c.field-meta.xml
<CustomField>
    <fullName>MVN_Day_Supply__c</fullName>
    <description>Number of days the medication will last when used as prescribed</description>
    <label>Day Supply</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>