force-app/main/default/src/objects/MVN_Staging_Claim__c/fields/MVN_Drug_Description__c.field-meta.xml
<CustomField>
    <fullName>MVN_Drug_Description__c</fullName>
    <description>Contains Drug Name, Strength, and Form</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Drug Description</label>
    <length>55</length>
    <type>Text</type>
</CustomField>