force-app/main/default/src/objects/MVN_Staging_Claim__c/fields/MVN_EOB_Date__c.field-meta.xml
<CustomField>
    <fullName>MVN_EOB_Date__c</fullName>
    <description>Date of the EOB for the claim. Required for approved claims. Claims rejected for missing EOB for example would not have an EOB date.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>EOB Date</label>
    <length>10</length>
    <type>Text</type>
</CustomField>