force-app/main/default/src/objects/MVN_Staging_Claim__c/fields/MVN_Error_Message__c.field-meta.xml
<CustomField>
    <fullName>MVN_Error_Message__c</fullName>
    <description>Error message from the conversion of Staging Claim to Claim.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Error message from the conversion of Staging Claim to Claim.</inlineHelpText>
    <label>Error Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>