force-app/main/default/src/objects/MVN_Staging_Claim__c/fields/MVN_Group_Number__c.field-meta.xml
<CustomField>
    <fullName>MVN_Group_Number__c</fullName>
    <description>Identifier for program</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Group Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>