force-app/main/default/src/objects/MVN_Staging_Claim__c/fields/MVN_JCode__c.field-meta.xml
<CustomField>
    <fullName>MVN_JCode__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>JCode</label>
    <length>100</length>
    <type>Text</type>
</CustomField>