force-app/main/default/src/objects/MVN_Staging_Claim__c/fields/MVN_Member_Id__c.field-meta.xml
<CustomField>
    <fullName>MVN_Member_Id__c</fullName>
    <description>ConnectiveRx generated. Once Member ID is assigned, this number must stay with patient</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Member ID</label>
    <length>15</length>
    <type>Text</type>
</CustomField>