force-app/main/default/src/objects/MVN_Staging_Claim__c/fields/MVN_NABP__c.field-meta.xml
<CustomField>
    <fullName>MVN_NABP__c</fullName>
    <description>NCPDP code for pharmacy</description>
    <encryptionScheme>None</encryptionScheme>
    <label>NABP</label>
    <length>15</length>
    <type>Text</type>
</CustomField>