force-app/main/default/src/objects/MVN_Staging_Claim__c/fields/MVN_New_Refill_Code__c.field-meta.xml
<CustomField>
    <fullName>MVN_New_Refill_Code__c</fullName>
    <description>0 = New, otherwise it’s the refill number; Value as submitted by the pharmacy</description>
    <encryptionScheme>None</encryptionScheme>
    <label>New Refill Code</label>
    <length>2</length>
    <type>Text</type>
</CustomField>