force-app/main/default/src/objects/MVN_Staging_Claim__c/fields/MVN_Number_Of_Refills__c.field-meta.xml
<CustomField>
    <fullName>MVN_Number_Of_Refills__c</fullName>
    <description>Total number of refills authorized, or 0 if none; Value as submitted by the pharmacy</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Number Of Refills</label>
    <length>2</length>
    <type>Text</type>
</CustomField>