force-app/main/default/src/objects/MVN_Staging_Claim__c/fields/MVN_Original_Claim_Authorization_Number__c.field-meta.xml
<CustomField>
    <fullName>MVN_Original_Claim_Authorization_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Original Claim Authorization Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>