force-app/main/default/src/objects/MVN_Staging_Claim__c/fields/MVN_Other_Coverage_Code__c.field-meta.xml
<CustomField>
    <fullName>MVN_Other_Coverage_Code__c</fullName>
    <description>Other Coverage code as submitted by the pharmacy.

Expected value: 08 

08 = Insured, Product Covered</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Other Coverage Code</label>
    <length>2</length>
    <type>Text</type>
</CustomField>