force-app/main/default/src/objects/MVN_Staging_Claim__c/fields/MVN_Partner_Id__c.field-meta.xml
<CustomField>
    <fullName>MVN_Partner_Id__c</fullName>
    <description>Partner ID: CRx</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Partner ID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>