force-app/main/default/src/objects/MVN_Staging_Claim__c/fields/MVN_Patient_Copay_Before_Applied__c.field-meta.xml
<CustomField>
    <fullName>MVN_Patient_Copay_Before_Applied__c</fullName>
    <description>Amount due after primary insurance billed</description>
    <label>Patient Copay Before Applied</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>