force-app/main/default/src/objects/MVN_Staging_Claim__c/fields/MVN_Patient_Copay_Before_Benefit__c.field-meta.xml
<CustomField>
    <fullName>MVN_Patient_Copay_Before_Benefit__c</fullName>
    <description>Patient Responsibility (after primary; before co-pay) This is required for approved claims only. Rejected claims may or may not have this available so validations at Integrichain should only be applied to approved claims.</description>
    <label>Patient Copay before Benefit applied</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>