force-app/main/default/src/objects/MVN_Staging_Claim__c/fields/MVN_Patient_Gender__c.field-meta.xml
<CustomField>
    <fullName>MVN_Patient_Gender__c</fullName>
    <description>1/M=Male; 2/F=Female</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Patient Gender</label>
    <length>1</length>
    <type>Text</type>
</CustomField>