force-app/main/default/src/objects/MVN_Staging_Claim__c/fields/MVN_Patient_OOP__c.field-meta.xml
<CustomField>
    <fullName>MVN_Patient_OOP__c</fullName>
    <description>Amount patient paid after primary and co-pay program. This is required for approved claims only. Rejected claims may or may not have this available so validations at Integrichain should only be applied to approved claims.</description>
    <label>Patient OOP</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>