force-app/main/default/src/objects/MVN_Staging_Claim__c/fields/MVN_Payment_Type__c.field-meta.xml
<CustomField>
    <fullName>MVN_Payment_Type__c</fullName>
    <description>This is required for approved claims only. 
CTM – Check to Practice
CTP – Check to Patient
ACH – EFT to Practice</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Payment Type</label>
    <length>3</length>
    <type>Text</type>
</CustomField>