force-app/main/default/src/objects/MVN_Staging_Claim__c/fields/MVN_Pharmacy_Address1__c.field-meta.xml
<CustomField>
    <fullName>MVN_Pharmacy_Address1__c</fullName>
    <description>Pharmacy street address 1</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Pharmacy Address1</label>
    <length>100</length>
    <type>Text</type>
</CustomField>