force-app/main/default/src/objects/MVN_Staging_Claim__c/fields/MVN_Pharmacy_Address2__c.field-meta.xml
<CustomField>
    <fullName>MVN_Pharmacy_Address2__c</fullName>
    <description>Pharmacy street address 2</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Pharmacy Address2</label>
    <length>35</length>
    <type>Text</type>
</CustomField>