force-app/main/default/src/objects/MVN_Staging_Claim__c/fields/MVN_Pharmacy_City__c.field-meta.xml
<CustomField>
    <fullName>MVN_Pharmacy_City__c</fullName>
    <description>Pharmacy city</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Pharmacy City</label>
    <length>35</length>
    <type>Text</type>
</CustomField>