force-app/main/default/src/objects/MVN_Staging_Claim__c/fields/MVN_Pharmacy_Name__c.field-meta.xml
<CustomField>
    <fullName>MVN_Pharmacy_Name__c</fullName>
    <description>Pharmacy individual store name</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Pharmacy Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>