force-app/main/default/src/objects/MVN_Staging_Claim__c/fields/MVN_Pharmacy_NPI__c.field-meta.xml
<CustomField>
    <fullName>MVN_Pharmacy_NPI__c</fullName>
    <description>Nat’l Provider ID for Prescriber</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Pharmacy NPI</label>
    <length>10</length>
    <type>Text</type>
</CustomField>