force-app/main/default/src/objects/MVN_Staging_Claim__c/fields/MVN_Pharmacy_State__c.field-meta.xml
<CustomField>
    <fullName>MVN_Pharmacy_State__c</fullName>
    <description>Pharmacy state</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Pharmacy State</label>
    <length>2</length>
    <type>Text</type>
</CustomField>