force-app/main/default/src/objects/MVN_Staging_Claim__c/fields/MVN_Pharmacy_Zip__c.field-meta.xml
<CustomField>
    <fullName>MVN_Pharmacy_Zip__c</fullName>
    <description>Pharmacy zip</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Pharmacy Zip</label>
    <length>10</length>
    <type>Text</type>
</CustomField>