force-app/main/default/src/objects/MVN_Staging_Claim__c/fields/MVN_Physician_Address2__c.field-meta.xml
<CustomField>
    <fullName>MVN_Physician_Address2__c</fullName>
    <description>Prescriber street address 2</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Physician Address2</label>
    <length>40</length>
    <type>Text</type>
</CustomField>