force-app/main/default/src/objects/MVN_Staging_Claim__c/fields/MVN_Physician_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>MVN_Physician_Last_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Physician Last Name</label>
    <length>35</length>
    <type>Text</type>
</CustomField>