force-app/main/default/src/objects/MVN_Staging_Claim__c/fields/MVN_Physician_Name__c.field-meta.xml
<CustomField>
    <fullName>MVN_Physician_Name__c</fullName>
    <description>format: LN, FN MI Suffix ProfDesg</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Physician Name</label>
    <length>35</length>
    <type>Text</type>
</CustomField>