force-app/main/default/src/objects/MVN_Staging_Claim__c/fields/MVN_Physician_Prof_Designation__c.field-meta.xml
<CustomField>
    <fullName>MVN_Physician_Prof_Designation__c</fullName>
    <description>Phys Professional Designation</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Physician Prof Designation</label>
    <length>20</length>
    <type>Text</type>
</CustomField>