force-app/main/default/src/objects/MVN_Staging_Claim__c/fields/MVN_Physician_Specialty_1__c.field-meta.xml
<CustomField>
    <fullName>MVN_Physician_Specialty_1__c</fullName>
    <description>Specialty 1</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Physician Specialty 1</label>
    <length>40</length>
    <type>Text</type>
</CustomField>