force-app/main/default/src/objects/MVN_Staging_Claim__c/fields/MVN_Physician_Specialty_2__c.field-meta.xml
<CustomField>
    <fullName>MVN_Physician_Specialty_2__c</fullName>
    <description>Specialty 2</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Physician Specialty 2</label>
    <length>40</length>
    <type>Text</type>
</CustomField>