force-app/main/default/src/objects/MVN_Staging_Claim__c/fields/MVN_Physician_Zip__c.field-meta.xml
<CustomField>
    <fullName>MVN_Physician_Zip__c</fullName>
    <description>Prescriber zip</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Physician Zip</label>
    <length>9</length>
    <type>Text</type>
</CustomField>