force-app/main/default/src/objects/MVN_Staging_Claim__c/fields/MVN_Product_Code__c.field-meta.xml
<CustomField>
    <fullName>MVN_Product_Code__c</fullName>
    <description>Manufacturer Codes listed: EVK</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Product Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>