force-app/main/default/src/objects/MVN_Staging_Claim__c/fields/MVN_Quantity__c.field-meta.xml
<CustomField>
    <fullName>MVN_Quantity__c</fullName>
    <description>Number of milliliters dispensed</description>
    <label>Quantity</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>