force-app/main/default/src/objects/MVN_Staging_Claim__c/fields/MVN_Rx_Number__c.field-meta.xml
<CustomField>
    <fullName>MVN_Rx_Number__c</fullName>
    <description>Hashed Rx Number</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Rx Number</label>
    <length>80</length>
    <type>Text</type>
</CustomField>