force-app/main/default/src/objects/MVN_Staging_Claim__c/fields/MVN_Status__c.field-meta.xml
<CustomField>
    <fullName>MVN_Status__c</fullName>
    <description>Status of the conversion from Staging Claim to Claim.</description>
    <inlineHelpText>Status of the conversion from Staging Claim to Claim.</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
                <default>true</default>
                <label>Pending</label>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>