force-app/main/default/src/objects/MVN_Staging_Claim__c/fields/MVN_Submission_Method__c.field-meta.xml
<CustomField>
    <fullName>MVN_Submission_Method__c</fullName>
    <description>(E)lectronic or (M)annual</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Submission Method</label>
    <length>1</length>
    <type>Text</type>
</CustomField>