force-app/main/default/src/objects/MVN_Staging_Claim__c/fields/MVN_Trace_Number__c.field-meta.xml
<CustomField>
    <fullName>MVN_Trace_Number__c</fullName>
    <description>Only applicable for EFT payment . For EFT payments, this number will be delivered in a subsequent record after the original record as time must elapse before the Eft trace number is returned from the bank.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Trace #</label>
    <length>20</length>
    <type>Text</type>
</CustomField>