force-app/main/default/src/objects/MVN_Staging_Claim__c/fields/MVN_Transaction_Type__c.field-meta.xml
<CustomField>
    <fullName>MVN_Transaction_Type__c</fullName>
    <description>Claim Processed
Claim Rejection 
Claim Reversal</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Transaction Type</label>
    <length>20</length>
    <type>Text</type>
</CustomField>