force-app/main/default/src/objects/MVN_Staging_Claim__c/fields/MVN_Treating_Practice_Address2__c.field-meta.xml
<CustomField>
    <fullName>MVN_Treating_Practice_Address2__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Treating Practice Address2</label>
    <length>40</length>
    <type>Text</type>
</CustomField>