force-app/main/default/src/objects/MVN_Staging_Claim__c/fields/MVN_Treating_Practice_City__c.field-meta.xml
<CustomField>
    <fullName>MVN_Treating_Practice_City__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Treating Practice City</label>
    <length>30</length>
    <type>Text</type>
</CustomField>