force-app/main/default/src/objects/MVN_Staging_Claim__c/fields/MVN_Treating_Practice_Phone__c.field-meta.xml
<CustomField>
    <fullName>MVN_Treating_Practice_Phone__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Treating Practice Phone</label>
    <length>20</length>
    <type>Text</type>
</CustomField>