force-app/main/default/src/objects/MVN_Staging_Claim__c/fields/MVN_Treating_Practice_State__c.field-meta.xml
<CustomField>
    <fullName>MVN_Treating_Practice_State__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Treating Practice State</label>
    <length>2</length>
    <type>Text</type>
</CustomField>